[package]
name = "bytex"
version = "0.1.1"
authors = ["AMS <josiphaboic@gmail.com>"]
edition = "2021"
description = "8bit helper functions, mostly for AVR"
repository = "https://github.com/BitFields/bytex.git"
keywords = ["8bit", "avr", "byte"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[badges]
codecov = { repository = "https://github.com/BitFields/bytex", branch = "master", service = "github" }